--- a/about.html
+++ b/about.html
@@ -25,6 +25,13 @@
       <h1 class="title">About</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </header>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptate quas autem. Quidem molestias ducimus dignissimos consequuntur, culpa et natus, error ab quas optio enim dolore voluptatum, nulla officiis voluptate!</p>
+      <p>Cum recusandae suscipit aliquam deserunt dolores perspiciatis error sint tempora quod omnis ullam corrupti quidem perferendis, necessitatibus mollitia excepturi minima doloremque atque molestias eveniet? Voluptas ea aliquam voluptates ipsa dolores.</p>
+      <p>Esse nemo hic, ex soluta aut nisi reprehenderit doloremque totam in beatae quam sunt ad? Modi odit cumque soluta asperiores adipisci similique deleniti voluptatibus voluptatem debitis veritatis, eaque sit assumenda!</p>
+      <p>Laboriosam placeat eveniet exercitationem hic nihil ea similique rerum eum quidem, a excepturi optio blanditiis dolorum natus doloremque, est id illo dolore maiores aliquid neque? Enim minima eaque fugiat necessitatibus.</p>
+      <p>Repellat tenetur fugit ad quod exercitationem placeat nesciunt libero, cupiditate dolore itaque perspiciatis possimus porro iusto sapiente voluptas nemo eum qui sit quia consequuntur eius ut dolorum provident quibusdam. Aliquid.</p>
+    </div>
   </main>
   <footer class="footer">
     <div class="main-footer">
